# rust-practice

./: .gitignore  README.md
ch3/branches/src/: main.rs
ch3/loops/src/: main.rs
ch3/practice/src/: christmas.rs  fibonacci.rs  main.rs  temperature.rs
ch3/variables/src/: main.rs
nonogram/: .gitignore  Cargo.toml
nonogram-solver/: .gitignore  Cargo.toml
nonogram-solver/lib/ocr/train/: 2.tsv  4.tsv  5.tsv  8.tsv  9.tsv
nonogram-solver/lib/report/: report.tsv
nonogram-solver/src/: image_decoder.rs  main.rs
nonogram-solver/src/solve/: image_decoder.rs  mod.rs  puzzle_solver.rs
nonogram-solver/src/train/: digit_pix_generator.rs  mod.rs  ocr_classifier.rs  ocr_trainer.rs
nonogram/lib/ocr/: assign
nonogram/lib/report/: report.tsv
nonogram/src/: main.rs
nonogram/src/solve/: image_decoder.rs  puzzle_solver.rs
rustlings/exercises/: quiz1.rs  quiz2.rs  quiz3.rs
rustlings/exercises/clippy/: clippy3.rs
rustlings/exercises/conversions/: as_ref_mut.rs  from_into.rs  from_str.rs  try_from_into.rs
rustlings/exercises/enums/: enums1.rs  enums2.rs  enums3.rs
rustlings/exercises/error_handling/: errors4.rs  errors6.rs
rustlings/exercises/functions/: functions1.rs  functions3.rs
rustlings/exercises/hashmaps/: hashmaps1.rs  hashmaps3.rs
rustlings/exercises/if/: if1.rs
rustlings/exercises/lifetimes/: lifetimes2.rs
rustlings/exercises/macros/: macros2.rs
rustlings/exercises/move_semantics/: move_semantics2.rs  move_semantics4.rs
rustlings/exercises/options/: options1.rs
trpl/ch12/minigrep/: Cargo.toml
trpl/ch12/minigrep/src/: lib.rs  main.rs
(+90 files in other folders)
