[package]
name = "nonogram-solver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
lazy_static = "1.4.0"
itertools = "0.10.5"
clap = { version = "4.2.1", features = ["derive"] }
md-5 = "0.10.5"